Install - Helmet and CSRF Token Check

--- a/Sections/Section10_Node_NPM_Express_MongoDB/aula16/src/views/index.ejs
+++ b/Sections/Section10_Node_NPM_Express_MongoDB/aula16/src/views/index.ejs
@@ -17,6 +17,7 @@
                 <%=  LocalVariable%> <!-- middleware variable-->
             </h1>
             <form action="/" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <label>Client</label>
                 <input type="text" name="client">
                 <button type="submit">Enviar</button>
